cambio de documento

--- a/les-arts.html
+++ b/les-arts.html
@@ -36,6 +36,7 @@
 
 
 </p>
+<p>holahichaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa</p>
    <div class="box">Comprar</div>
    <div class="box1">+INFO</div>
 
