--- a/les-arts.html
+++ b/les-arts.html
@@ -11,7 +11,7 @@
     <ul class="menu">
     
         <li class="menu">Programació i entrades</li>
-        <li class="menu">visita </li>
+        <li class="menu">visita  teatro</li>
         <li class="menu">Les ArtsProjecte Social</li>
         <li class="menu">Dona'ms suport</li>
        
